<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">PayWithSecurePaymentExample</string>
  <string name="no_account">There is no Clover account.</string>
  <string name="services_not_connected">The required services are not yet connected.</string>
  <string name="payintent_title">Intent Operations</string>

  <string name="connector_sale">Sale</string>
  <string name="connector_auth">Auth</string>
  <string name="connector_full_refund">Full Refund</string>
  <string name="connector_tip_adjust">Tip Adjust</string>
  <string name="connector_void">Void</string>
  <string name="connector_rpp">Retrieve Pending Payments</string>
  <string name="connector_manual_refund">Manual Refund</string>
  <string name="connector_vault_card">Vault Card</string>
  <string name="connector_read_card_data">Read Card Data</string>
  <string name="connector_preauth">Pre Auth</string>
  <string name="connector_capturepreauth">Capture Pre Auth</string>
  <string name="connector_retrieve_payment">Retrieve Payment</string>
  <string name="connector_closeout">Closeout</string>


  <string name="connector_title">Connector Operations</string>
  <string name="card_entry_methods_allowed">Card Entry Methods Allowed</string>

  <string name="mag_stripe">Mag Stripe</string>

  <string name="chip_card_contact">Chip Card Contact</string>

  <string name="nfc_contactless">NFC Contactless</string>

  <string name="manual_entry">Manual Entry</string>

  <string name="empty_inventory">Please add an item to the inventory before attempting to take orders.</string>

  <string name="capture_preauth_successful">Capture for PreAuth succeeded for Payment ID: %1$s Amount: %2$d Tip Amount: %3$d</string>

  <string name="capture_preauth_failed">Capture for PreAuth not successful</string>

  <string name="refund_successful">Payment Refund succeeded for Payment ID: %1$s Amount: %2$d </string>

  <string name="refund_failed">Payment Refund not successful</string>

  <string name="void_successful">Payment Void succeeded for Payment ID: %1$s</string>

  <string name="void_failed">Payment Void not successful</string>

  <string name="retrieve_pending_payments_successful">Retrieve Pending Payments succeeded</string>

  <string name="retrieve_pending_payments_failed">Retrieve Pending Payments not successful</string>

  <string name="read_card_data_successful">Read Card Data call succeeded - Track1 Data = %1$s</string>

  <string name="read_card_data_failed">Read Card Data call not successful</string>

  <string name="manual_refund_successful">Manual Refund Succeeded for Order: %1$s</string>

  <string name="manual_refund_failed">Manual Refund Not Successful</string>

  <string name="vault_card_successful">Vault Card Successful</string>

  <string name="vault_card_failed">Vault Card Not Successful</string>

  <string name="payment_successful">Payment Succeeded for Order: %1$s</string>

  <string name="payment_failed">Payment Not Successful</string>

  <string name="start_secure_pay_failed">Start Secure Pay Not Successful</string>

  <string name="payment_amount">Payment Amount</string>

  <string name="order_uuid">Order ID</string>

  <string name="tip_amount">Tip Amount</string>

  <string name="external_payment_id">External Payment Id</string>

  <string name="voice_auth_code">Voice Auth Code</string>

  <string name="postal_code">Postal Code</string>

  <string name="disable_cashback">Disable Cashback</string>

  <string name="tax_amount">Tax Amount</string>

  <string name="card_not_present">Card Not Present</string>

  <string name="clover_print">Clover Device Printing</string>

  <string name="transaction_no">Transaction No</string>

  <string name="restart_on_fail">Restart Transaction on Fail or Cancel</string>

  <string name="force_offline">Force Payment to Offline</string>

  <string name="required">(Required)</string>

  <string name="optional">(Optional)</string>

  <string name="show_advanced">Use Advanced</string>

  <string name="invalid_amount">One or more amount fields have an invalid format</string>

  <string name="amount_required">Valid amount is required</string>

  <string name="could_not_create_order">Order was not successfully created for this payment</string>

  <string name="tip_amount_required">Valid tip amount is required for TipMode of TIP_PROVIDED</string>

  <string name="tip_mode_invalid_for_sale">TipMode invalid for a Sale transaction type</string>

  <string name="tip_amount_ignored">TipAmount will be ignored based on AUTH/PREAUTH payment request</string>

  <string name="payment_ext_id">Payment with external id %1$s</string>

  <string name="data_returned">Data returned is $s</string>

  <string name="payment_null">Payment is null</string>

  <string name="connector_not_connected">Payment Connector is not connected</string>

  <string name="allow_offline_payments">Allow Offline Payments:</string>

  <string name="accept_offline_no_prompt">Accept Offline w/o Prompt:</string>

  <string name="signature_entry_location">Signature Entry Location:</string>

  <string name="signature_threshold">Signature Threshold:</string>

  <string name="insert_or_swipe_card">Insert or Swipe Card</string>

  <string name="batch_id">Batch ID</string>

  <string name="allow_open_tabs">Allow Open Tabs</string>

  <string name="external_payment_id_null">The External Payment ID must be populated with a non-null value</string>
</resources>
